--- a/BloQuery/BloQuery/Base.lproj/Main.storyboard
+++ b/BloQuery/BloQuery/Base.lproj/Main.storyboard
@@ -139,7 +139,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="szK-ud-CTx">
-                                            <rect key="frame" x="106" y="5" width="427" height="94"/>
+                                            <rect key="frame" x="86" y="5" width="447" height="94"/>
                                             <attributedString key="attributedText">
                                                 <fragment content="This is where all the questions are going to go. Is this the first Question?">
                                                     <attributes>
@@ -156,21 +156,18 @@
                                                 <constraint firstAttribute="width" id="xZd-b4-FtN"/>
                                             </constraints>
                                         </imageView>
-                                        <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="faceIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Sm9-2j-nfz">
-                                            <rect key="frame" x="23" y="8" width="50" height="50"/>
+                                        <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="faceIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Sm9-2j-nfz">
+                                            <rect key="frame" x="23" y="8" width="30" height="30"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="50" id="HbY-uJ-IAj"/>
+                                                <constraint firstAttribute="width" constant="30" id="HbY-uJ-IAj"/>
                                             </constraints>
                                         </imageView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="7CR-Ft-gSZ" firstAttribute="top" secondItem="szK-ud-CTx" secondAttribute="top" id="5El-xT-kvh"/>
                                         <constraint firstItem="Sm9-2j-nfz" firstAttribute="top" secondItem="MdR-ZN-QYi" secondAttribute="top" constant="10" id="E9r-z1-r16"/>
-                                        <constraint firstItem="szK-ud-CTx" firstAttribute="leading" secondItem="Sm9-2j-nfz" secondAttribute="trailing" constant="36" id="HWR-TK-HVA"/>
                                         <constraint firstItem="szK-ud-CTx" firstAttribute="leading" secondItem="Sm9-2j-nfz" secondAttribute="trailing" constant="36" id="VLo-H6-QvL"/>
-                                        <constraint firstItem="Sm9-2j-nfz" firstAttribute="leading" secondItem="7CR-Ft-gSZ" secondAttribute="trailing" constant="18" id="ZIb-yN-M66"/>
                                         <constraint firstItem="7CR-Ft-gSZ" firstAttribute="leading" secondItem="MdR-ZN-QYi" secondAttribute="leadingMargin" constant="-6" id="aqV-9W-C0i"/>
-                                        <constraint firstItem="Sm9-2j-nfz" firstAttribute="top" secondItem="MdR-ZN-QYi" secondAttribute="topMargin" constant="2" id="iMh-J2-qgg"/>
                                         <constraint firstAttribute="bottom" secondItem="Sm9-2j-nfz" secondAttribute="bottom" constant="40" id="kAj-1X-NAo"/>
                                         <constraint firstItem="Sm9-2j-nfz" firstAttribute="leading" secondItem="7CR-Ft-gSZ" secondAttribute="trailing" constant="18" id="nTg-Pj-ruY"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="7CR-Ft-gSZ" secondAttribute="bottom" constant="6.5" id="rSl-PZ-JQV"/>
