--- a/BloQuery/BloQuery/Base.lproj/Main.storyboard
+++ b/BloQuery/BloQuery/Base.lproj/Main.storyboard
@@ -244,7 +244,7 @@
                                                 <constraint firstAttribute="width" id="xZd-b4-FtN"/>
                                             </constraints>
                                         </imageView>
-                                        <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="bloProfile" translatesAutoresizingMaskIntoConstraints="NO" id="Sm9-2j-nfz">
+                                        <imageView userInteractionEnabled="NO" tag="200" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="Sm9-2j-nfz">
                                             <rect key="frame" x="23" y="8" width="30" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="30" id="HbY-uJ-IAj"/>
@@ -444,7 +444,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bloProfile" width="794" height="932"/>
         <image name="profile" width="25" height="25"/>
     </resources>
 </document>
