--- a/BloQuery/BloQuery/Base.lproj/Main.storyboard
+++ b/BloQuery/BloQuery/Base.lproj/Main.storyboard
@@ -238,19 +238,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="533" height="99.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7CR-Ft-gSZ">
-                                            <rect key="frame" x="2" y="5" width="0.0" height="80"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" id="xZd-b4-FtN"/>
-                                            </constraints>
-                                        </imageView>
-                                        <imageView userInteractionEnabled="NO" tag="200" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="Sm9-2j-nfz">
-                                            <rect key="frame" x="23" y="8" width="30" height="30"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="30" id="HbY-uJ-IAj"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="szK-ud-CTx">
+                                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="szK-ud-CTx">
                                             <rect key="frame" x="66" y="3" width="400" height="94"/>
                                             <attributedString key="attributedText">
                                                 <fragment content="This is where all the questions are going to go. Is this the first Question?">
@@ -262,17 +250,13 @@
                                             </attributedString>
                                             <color key="highlightedColor" red="0.9888055788590604" green="0.0" blue="0.9329383389261745" alpha="1" colorSpace="calibratedRGB"/>
                                         </label>
+                                        <imageView userInteractionEnabled="NO" tag="200" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="7CR-Ft-gSZ">
+                                            <rect key="frame" x="13" y="30" width="40" height="40"/>
+                                        </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="7CR-Ft-gSZ" firstAttribute="top" secondItem="szK-ud-CTx" secondAttribute="top" id="5El-xT-kvh"/>
-                                        <constraint firstItem="Sm9-2j-nfz" firstAttribute="top" secondItem="MdR-ZN-QYi" secondAttribute="top" constant="10" id="E9r-z1-r16"/>
-                                        <constraint firstItem="szK-ud-CTx" firstAttribute="leading" secondItem="Sm9-2j-nfz" secondAttribute="trailing" constant="8" id="VLo-H6-QvL"/>
-                                        <constraint firstItem="7CR-Ft-gSZ" firstAttribute="leading" secondItem="MdR-ZN-QYi" secondAttribute="leadingMargin" constant="-6" id="aqV-9W-C0i"/>
-                                        <constraint firstAttribute="bottom" secondItem="Sm9-2j-nfz" secondAttribute="bottom" constant="40" id="kAj-1X-NAo"/>
-                                        <constraint firstItem="Sm9-2j-nfz" firstAttribute="leading" secondItem="7CR-Ft-gSZ" secondAttribute="trailing" constant="18" id="nTg-Pj-ruY"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="7CR-Ft-gSZ" secondAttribute="bottom" constant="6.5" id="rSl-PZ-JQV"/>
-                                        <constraint firstItem="7CR-Ft-gSZ" firstAttribute="top" secondItem="MdR-ZN-QYi" secondAttribute="topMargin" constant="-3" id="xPy-Ku-A9g"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="szK-ud-CTx" secondAttribute="bottom" constant="-7.5" id="yq5-6c-Akw"/>
+                                        <constraint firstItem="7CR-Ft-gSZ" firstAttribute="leading" secondItem="MdR-ZN-QYi" secondAttribute="leadingMargin" constant="5" id="GQY-2v-rPo"/>
+                                        <constraint firstItem="szK-ud-CTx" firstAttribute="leading" secondItem="7CR-Ft-gSZ" secondAttribute="trailing" constant="13" id="gfW-LP-2IX"/>
                                         <constraint firstAttribute="trailing" secondItem="szK-ud-CTx" secondAttribute="trailing" id="z9f-9q-E5i"/>
                                     </constraints>
                                 </tableViewCellContentView>
